--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
             android:name=".TextShadowActivity"
             android:label="@string/title_activity_text_shadow" >
         </activity>
+        <activity
+            android:name=".Custlist"
+            android:label="@string/title_activity_custlist" >
+        </activity>
+        <activity
+            android:name=".MainList"
+            android:label="@string/title_activity_main_list" >
+        </activity>
     </application>
 
 </manifest>
