--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:name=".MainList"
             android:label="@string/title_activity_main_list" >
         </activity>
+        <activity
+            android:name=".MainList_chk"
+            android:label="@string/title_activity_main_list" >
+        </activity>
     </application>
 
 </manifest>
