--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".MainList_chk"
             android:label="@string/title_activity_main_list" >
         </activity>
+        <activity
+            android:name=".DrageView"
+            android:label="@string/title_activity_drage_view" >
+        </activity>
     </application>
 
 </manifest>
