--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
-        <receiver android:name="NotifySample$switchButtonListener" />
+        <receiver android:name=".NotifySample$switchButtonListener" />
+
         <activity
             android:name=".ScreenCap"
             android:label="@string/title_activity_screen_cap" >
@@ -43,6 +44,10 @@
         <activity
             android:name=".NotifySample"
             android:label="@string/title_activity_notify_sample" >
+        </activity>
+        <activity
+            android:name=".CustNotify"
+            android:label="@string/title_activity_cust_notify" >
         </activity>
     </application>
 
